--- a/bat/config
+++ b/bat/config
@@ -2,6 +2,6 @@
 # a command-line option that you want to pass to `bat` by default. You can
 # run `bat --help` to get a list of all possible configuration options.
 
---theme="Catppuccin-Mocha"
+--theme="Catppuccin Mocha"
 --italic-text=always
 --force-colorization
